--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "itbz/fpdf": "^1.7",
-        "itbz/fpdi": "^1.5"
+        "setasign/fpdi/fpdf": "^1.7",
+        "setasign/fpdi": "^1.5"
     },
     "autoload": {
         "psr-4": {
