--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "binarystash/pdf-watermarker",
+    "name": "uvinum/pdf-watermarker",
     "type": "library",
     "description": "Simple PDF Watermarker",
     "license": "MIT",
@@ -15,12 +15,15 @@
         {
             "name": "Jeroen v.d. Gulik",
             "homepage": "https://github.com/jeroenvdgulik"
+        },
+        {
+            "name": "Uvinum",
+            "homepage": "https://github.com/uvinum"
         }
     ],
     "require": {
         "php": ">=5.3.0",
-        "setasign/fpdi/fpdf": "^1.7",
-        "setasign/fpdi": "^1.5"
+        "setasign/fpdi-fpdf": "^2.2"
     },
     "autoload": {
         "psr-4": {
