--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "setasign/fpdi-fpdf": "^1.7",
-        "setasign/fpdi": "^1.5"
+        "setasign/fpdi-fpdf": "^2.2"
     },
     "autoload": {
         "psr-4": {
