Change project name.

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "binarystash/pdf-watermarker",
+    "name": "uvninum/pdf-watermarker",
     "type": "library",
     "description": "Simple PDF Watermarker",
     "license": "MIT",
