--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "setasign/fpdi/fpdf": "^1.7",
+        "setasign/fpdi-fpdf": "^1.7",
         "setasign/fpdi": "^1.5"
     },
     "autoload": {
