--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,25 @@
         {
             "name": "Jeroen v.d. Gulik",
             "homepage": "https://github.com/jeroenvdgulik"
+        },
+        {
+            "name": "Uvinum Engineering",
+            "homepage": "https://github.com/uvinum"
         }
     ],
     "require": {
-        "php": ">=5.3.0",
+        "php": ">=7.1",
         "setasign/fpdi-fpdf": "^2.2"
     },
     "autoload": {
         "psr-4": {
             "Uvinum\\PDFWatermark\\": "src"
         }
+    },
+    "scripts": {
+        "inspect": "phpstan analyse src -l7 --ansi"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^0.11.8"
     }
 }
