--- a/composer.json
+++ b/composer.json
@@ -25,15 +25,28 @@
         "php": ">=7.1",
         "setasign/fpdi-fpdf": "^2.2"
     },
+    "require-dev": {
+        "phpstan/phpstan": "^0.11.8",
+        "phpunit/phpunit": "^8.1",
+        "squizlabs/php_codesniffer": "^3.4"
+    },
     "autoload": {
         "psr-4": {
             "Uvinum\\PDFWatermark\\": "src"
         }
     },
     "scripts": {
-        "inspect": "phpstan analyse src -l7 --ansi"
+        "check-all": [
+            "@cs-check",
+            "@test",
+            "@inspect"
+        ],
+        "cs-check": "phpcs src --colors",
+        "cs-fix": "phpcbf src --colors",
+        "inspect": "phpstan analyse src -l7 --ansi",
+        "test": "phpunit --colors=always"
     },
-    "require-dev": {
-        "phpstan/phpstan": "^0.11.8"
+    "config": {
+        "sort-packages": true
     }
 }
