start testing watermark class and add used extensions to composer

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,8 @@
     "require": {
         "php": ">=7.1",
         "ext-fileinfo": "*",
+        "ext-exif": "*",
+        "ext-gd": "*",
         "setasign/fpdi-fpdf": "^2.2"
     },
     "require-dev": {
